--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,5 +7,5 @@
         Taskr
     </h1>
     <p>Helping you increase your productivity.</p>
-    <%= link_to 'Sign Up', '#', class: 'btn btn-primary btn-lg' %>
+    <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
 </div>
