--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,12 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, html: { class: 'form-signin' }) do |f| %>
   <%= f.error_notification %>
+  <h2 class = 'text-center'>Edit <%= resource_name.to_s.humanize %></h2>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :email, required: true,
+                autofocus: true,
+                label: false,
+                placeholder: "Email",
+                input_html: { class: 'form-control' }%>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
@@ -13,19 +15,22 @@
     <%= f.input :password,
                 hint: "leave it blank if you don't want to change it",
                 required: false,
+                label: false,
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: false,
+                label: false,
+                placeholder: "Password",
+                input_html: { class: 'form-control' },
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
                 hint: "we need your current password to confirm your changes",
                 required: true,
+                label: false,
+                placeholder: "Current Password",
+                input_html: { class: 'form-control' },
                 input_html: { autocomplete: "current-password" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
+    <%= f.button :submit, "Update", class: 'btn btn-primary btn-block' %>
 <% end %>
 
 <h3>Cancel my account</h3>
