--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,27 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-signin' }) do |f| %>
   <%= f.error_notification %>
-
-  <div class="form-inputs">
+  <h2 class = 'text-center'>Sign up</h2>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
+                label: false,
+                placeholder: "Email",
+                input_html: { class: 'form-control' },
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
+                label: false,
+                placeholder: "Password",
+                input_html: { class: 'form-control' },
                 hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: true,
+                label: false,
+                placeholder: "Password",
+                input_html: { class: 'form-control' },
                 input_html: { autocomplete: "new-password" } %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+    <%= f.button :submit, "Sign up", class: 'btn btn-primary btn-block' %>
 <% end %>
 
 <%= render "devise/shared/links" %>
