--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Showing Task</h1>
 <strong>Content: </strong> <%= @task.content %>
+<p>
+<%= link_to 'Go back to all tasks', tasks_path %> |
+<%= link_to 'Edit', edit_task_path(@task) %>
+</p>
