--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -8,6 +8,7 @@
 <% end %>
 <%= simple_form_for (@task) do |f| %>
 	<%= f.input :content %>
+	<%= f.input :state %>
 	<%= f.button :submit %>
 <% end %>
 <p>
