--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,3 +1,4 @@
+<!--
 <tr>
 	<td><%= task.content %></td>
 	<td><%= task.state %></td>
@@ -11,3 +12,19 @@
 		<td><%= link_to 'Mark as Doing', change_task_path(task, state: "doing"), method: :put %></td>
 	<% end %>
 </tr>
+-->
+
+<div class = 'panel panel-success'>
+	<div class = 'panel-heading'><%= link_to edit_task_path(task) do %>Created: <%= time_ago_in_words(task.created_at) %> ago<% end %></div>
+	<div class = 'panel-body'><%= task.content %></div>
+	<div class = 'panel-footer'>
+	<div class="btn-group btn-group-justified">
+		<% if task.state == 'doing' %>
+		<%= link_to 'Mark as To Do', change_task_path(task, state: "to_do"), method: :put, class: 'btn btn-success' %>
+		<%= link_to 'Mark as Done', change_task_path(task, state: "done"), method: :put, class: 'btn btn-success' %>
+		<% else %>
+			<%= link_to 'Mark as Doing', change_task_path(task, state: "doing"), method: :put, class: 'btn btn-success' %>
+		<% end %>
+	</div>
+	</div>
+</div>
