--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -6,10 +6,9 @@
 		<% end %>
 	</ul>
 <% end %>
-<%= simple_form_for (@task) do |f| %>
-	<%= f.input :content %>
-	<%= f.input :state %>
-	<%= f.button :submit %>
+<%= simple_form_for (@task), html: { class: 'form-signin' } do |f| %>
+	<%= f.input :content, label: false, placeholder: 'Content', autofocus: true %>
+	<%= f.button :submit, class: 'btn btn-primary btn-block' %>
 <% end %>
 <p>
 <%= link_to 'Go back to all tasks', tasks_path %>
