--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -15,7 +15,9 @@
 -->
 
 <div class = 'panel panel-success'>
-	<div class = 'panel-heading'><%= link_to edit_task_path(task) do %>Created: <%= time_ago_in_words(task.created_at) %> ago<% end %></div>
+	<div class = 'panel-heading'><%= link_to edit_task_path(task) do %>Created: <%= time_ago_in_words(task.created_at) %> ago<% end %>
+		<%= link_to 'Delete', task_path(task), method: :delete, data: { confirm: 'Are you sure you want to delete this task?' }, class: 'pull-right' %>
+	</div>
 	<div class = 'panel-body'><%= task.content %></div>
 	<div class = 'panel-footer'>
 	<div class="btn-group btn-group-justified">
